deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: planning-poker-frontend
  namespace: planning-poker
  labels:
    app: planning-poker-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: planning-poker-frontend
  template:
    metadata:
      labels:
        app: planning-poker-frontend
    spec:
      containers:
        - name: planning-poker-frontend
          image: gcr.io/ds-general/planning-poker-frontend:0
          ports:
          - containerPort: 80
